2004-07-06 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
  * src/gdcmDicomDir.cxx, gdcmDocEntrySet.cxx: removed inclusion of errno.h
  * src/gdcmDocument.[h|cxx], gdcmFile.[h|cxx], gdcmHeader.[h|cxx]:
    enable_sequences removed from gdcmHeader constructor and dependencies.
  * Example/PrintHeader.cxx: fixed accordingly (enable_sequences removal).
  * gdcmPython/demo/PrintHeader.py: dummy fix.

2004-07-27 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
  * Test/CMakeLists.txt: newly re-introduced SIEMENS_Sonata-12-MONO2-SQ.dcm
    in gdcmData (previously known as E00001S03I0015.dcm) is blacklisted.

2004-07-21 Jean-Pierre Roux
  * FIX Now, Parsing and Printing a DICOMDIR do work!
       ( troubles remain in makeDicomDir and BuildUpDicomDir :-(
		 
2004-07-20 Jean-Pierre Roux
  * FIX Some brain damaged headers have Zero-Lenght fields 
        for 'Transfert Syntax UID', or 'Media Stored SOP Class UID'.

2004-07-19 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * src/gdcmCommon.h, gdcmDict.cxx, gdcmTS.cxx : bug fix for msvc6 compilation
   * src/gdcmDebug.[h|cxx] : bug fix for msvc6 compilation. Replace the dbg
     variable (instance of gdcmDebug) by a definition macro, and the instance
     is now in static in the gdcmDebug class
   * src/gdcmSQItem.h : (FIXME) remove an undefined method
   * Test/PrintAllDocument.cxx : bug fix in the result of the test

2004-07-06 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
   * WARNING: ctest now depends more tightly on gdcmData. You should
     check out gdcmData properly for things to run smoothly...
   * src/gdcmDocument.cxx MAX_SIZE_LOAD_ELEMENT_VALUE is set back to 0xfff
     (4096) for "ctest -R TestAllEntryVerify" to be able to run (i.e.
     we need the pixels not be loaded in order to use the ValEntry
     that displays position and size).
   * Test/TestAllEntryVerify.cxx a new low level test now seems fair.
     This is a C++ based equivalent of gdcmPython/testSuite.py that should